--- a/app/src/main/res/layout/activity_html_display.xml
+++ b/app/src/main/res/layout/activity_html_display.xml
@@ -11,6 +11,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@android:color/transparent"
+        android:layout_marginBottom="45dp"
         />
 
     <com.google.android.gms.ads.AdView
